# smiles_to_iupac2.0

./: .gitignore  README.rst  conda.yml  install.sh  pyproject.toml
data_preparing/: .gitignore  Makefile  __temp.py  __tiffany.py  _jam.md  _jam_decode.py  _jam_encode.py  _mol_container_serialization.py  _timer.py  _tokenaizer.py
data_preparing/Kiki/: _copy_filter.py  _log_jambalaya.py  _logger.py  _mol_container_serialization.py  _notification.py  _send_msg.py  _sum_jambalaya.py  _timer.py  _tokenaizer.py  _total_counting_jambalaya.py  download_gz.py  download_xml.py  process_data.py  process_data_dump.py  process_gz.py  process_xml.py
data_preparing/Kiki/_wasmed_code__/: _none_filter.py  _unique_chars.py
data_preparing/Kiki/jambalaya/: main.ipynb  sample_gz.txt  uniqle_data_gz.txt
data_preparing/klaster/: .gitignore  Makefile
data_preparing/klaster/_features/: __init__.py  _logger.py  _traceback.py
data_preparing/oldcode/: _jam_encode.py
model/: .gitignore  Makefile  __features.py  __klaster.py  __main.py  __temp.py  __train🚀.py  __train🚀_hard.py  _klaster.py  _learn.sh  _model.py  _start.sh  _test🎯.py  _train🚀.py  _validation.csv  data.csv  learn_model.sh  monitor.sh  note.py  start.sh
model/_features/: __init__.py  _batch_reader.py  _meta.py  _telegram.py  _timer.py
submodules/lithium/: .gitignore  setup.py
submodules/lithium/lithium/: __init__.py  _send_msg.py
submodules/rmolencoder-main/: .gitignore  README.md  run_pretrain.py  setup.py
submodules/rmolencoder-main/RMolEncoder/: __init__.py  dataset.py  model.py  modules.py  utils.py
