[tool.poetry]
name = "SMILES_to_IUPAC"
version = "1.0"
description = "Library for converting SMILES Presentation in IUPAC"
authors = ["Lipatov Denis <lipatov.denis163@gmail.com>"]
license = "LGPLv3"
readme = "README.rst"
homepage = "https://github.com/walderhu/SMILES_to_IUPAC"
include = [{path = "model/*/*.pyd", format = "wheel"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^25.3.0"
azureml = "^0.2.7"
cachedmethods = "^0.1.4"
certifi = "^2025.4.26"
cgrtools = "^4.0.41"
charset-normalizer = "^3.4.2"
chython = "^1.78"
chytorch = "^1.65"
chytorch-rxnmap = "^1.4"
cimtools = "^4.0.8"
click = "^8.2.0"
contourpy = "^1.3.2"
filelock = "^3.18.0"
flatbuffers = "^25.2.10"
fonttools = "^4.58.0"
fsspec = "^2025.3.2"
gast = "^0.6.0"
h5py = "^3.13.0"
idna = "^3.10"
importlib-metadata = "^8.7.0"
itsdangerous = "^2.2.0"
joblib = "^1.2.0"
lazy-object-proxy = "^1.11.0"
libclang = "^18.1.1"
lightning = "^2.5.1"
lightning-utilities = "^0.14.3"
lxml = "^4.9.4"
markupsafe = "^3.0.2"
matplotlib = "^3.10.3"
ml-dtypes = "^0.5.1"
narwhals = "^1.39.0"
networkx = "^3.4.2"
numpy = "^1.26.4"
opt-einsum = "^3.4.0"
optree = "^0.15.0"
packaging = "^24.2"
pandas = "^2.2.3"
plotly = "^6.0.1"
propcache = "^0.3.1"
protobuf = "^5.29.4"
py-mini-racer = "^0.6.0"
pyjnius = "^1.6.1"
pyparsing = "^3.2.3"
pytelegrambotapi = "^4.27.0"
python-dateutil = "^2.9.0"
pytorch-lightning = "^2.5.1"
pytz = "^2025.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
retrying = "^1.3.4"
scikit-learn = "^1.2.2"
sentencepiece = "^0.2.0"
setuptools = "^80.4.0"
six = "^1.17.0"
sympy = "^1.14.0"
telebot = "^0.0.5"
termcolor = "^3.1.0"
threadpoolctl = "^3.6.0"
tomli = "^2.2.1"
torch = "^2.7.0"
torchaudio = "^2.7.0"
torchmetrics = "^1.7.1"
torchtyping = "^0.1.5"
torchvision = "^0.22.0"
tqdm = "^4.67.1"
triton = "^3.3.0"
typeguard = "^2.13.3"
tzdata = "^2025.2"
urllib3 = "^2.4.0"
wrapt = "^1.17.2"
zipp = "^3.21.0"

# CUDA-related packages (optional)
nvidia-cublas-cu12 = {version = "^12.6.4.1", optional = true}
nvidia-cuda-cupti-cu12 = {version = "^12.6.80", optional = true}
nvidia-cuda-nvcc-cu12 = {version = "^12.9.41", optional = true}
nvidia-cuda-nvrtc-cu12 = {version = "^12.6.77", optional = true}
nvidia-cuda-runtime-cu12 = {version = "^12.6.77", optional = true}
nvidia-cudnn-cu12 = {version = "^9.5.1.17", optional = true}
nvidia-cufft-cu12 = {version = "^11.3.0.4", optional = true}
nvidia-cufile-cu12 = {version = "^1.11.1.6", optional = true}
nvidia-curand-cu12 = {version = "^10.3.7.77", optional = true}
nvidia-cusolver-cu12 = {version = "^11.7.1.2", optional = true}
nvidia-cusparse-cu12 = {version = "^12.5.4.2", optional = true}
nvidia-cusparselt-cu12 = {version = "^0.6.3", optional = true}
nvidia-nccl-cu12 = {version = "^2.26.2", optional = true}
nvidia-nvjitlink-cu12 = {version = "^12.6.85", optional = true}
nvidia-nvtx-cu12 = {version = "^12.6.77", optional = true}

[tool.poetry.extras]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvcc-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-cufile-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12"
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^8.14.0"
jedi = "^0.19.2"
jupyter-client = "^7.3.4"
jupyter-core = "^5.7.2"
matplotlib-inline = "^0.1.7"
nest-asyncio = "^1.6.0"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
prompt-toolkit = "^3.0.51"
psutil = "^5.9.1"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pyzmq = "^26.2.0"
stack-data = "^0.6.3"
tornado = "^6.1"
traitlets = "^5.14.3"
typing-extensions = "^4.13.2"
wcwidth = "^0.2.13"

[build-system]
requires = ["poetry-core", "setuptools", "cython>=3.0.5"]
build-backend = "poetry.core.masonry.api"